Активные карточки в табах

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,8 +4,8 @@
 @import 'blocks/carousel'
 @import 'blocks/section-inner'
 @import 'blocks/works'
-
-* 
+    
+body 
     color: $main-font-color
 
 ul
@@ -14,3 +14,4 @@ ul
 .container
     width: 1138px
     margin: 0 auto
+
