--- a/sass/blocks/_works.sass
+++ b/sass/blocks/_works.sass
@@ -13,9 +13,61 @@
             &_active
                 color: $main-elements-color
         &__item
-            margin: 29px 0 0 29px
-            &:nth-child(3n+1)
-                margin-left: 0
+            &-wrapper
+                margin: 29px 0 0 29px
+                position: relative
+                &:nth-child(3n+1)
+                    margin-left: 0
+            &-hovered
+                position: absolute
+                display: flex
+                flex-direction: column
+                align-items: center
+                justify-content: center
+                top: 0
+                width: 360px
+                height: 320px
+                background: rgba(192, 48, 28, .7)
+                &-wrapper
+                    color: white !important
+                &-heading
+                    font-size: 18px
+                    line-height: 18px
+                    margin-bottom: 12px
+                    text-align: center
+                &-text
+                    font-size: 12px
+                    line-height: 12px
+                    text-align: center
+                    margin-bottom: 25px
+                &-btn
+                    display: inline-block
+                    padding: 10px 38px 10px 21px
+                    font-size: 14px
+                    line-height: 14px
+                    color: $main-elements-color
+                    background: rgba(255, 255, 255, .85)
+                    position: relative
+                    text-transform: uppercase
+                    transition: background .2s
+                    &:hover
+                        color: $main-elements-color
+                        text-decoration: none
+                        background: rgba(255, 255, 255, 1)
+                    &::before, &::after
+                        display: block
+                        position: absolute
+                        content: ''
+                        height: 1px
+                        width: 6.65px
+                        background: $main-elements-color
+                        right: 21px
+                    &::before
+                        transform: rotate(45deg)
+                        top: 15px
+                    &::after
+                        top: 19.25px
+                        transform: rotate(-45deg)
         &__items
             display: flex
             flex-wrap: wrap
