валидированная форма без возможности отправки

--- a/sass/blocks/_about.sass
+++ b/sass/blocks/_about.sass
@@ -8,7 +8,6 @@
         width: 100%
         margin-bottom: 70px
     &__arcticle
-        width: 567px
+        max-width: 555px
         font-size: 14px
         line-height: 24px
-        padding: 0 10px 
