--- a/sass/blocks/_works.sass
+++ b/sass/blocks/_works.sass
@@ -14,7 +14,7 @@
                 color: $main-elements-color
         &__item
             &-wrapper
-                margin: 29px 0 0 29px
+                margin: 28px 0 0 24px
                 position: relative
                 &:nth-child(3n+1)
                     margin-left: 0
@@ -29,7 +29,7 @@
                 height: 320px
                 background: rgba(192, 48, 28, .7)
                 &-wrapper
-                    color: white !important
+                    color: white
                 &-heading
                     font-size: 18px
                     line-height: 18px
@@ -50,9 +50,9 @@
                     position: relative
                     text-transform: uppercase
                     transition: background .2s
+                    cursor: pointer
                     &:hover
                         color: $main-elements-color
-                        text-decoration: none
                         background: rgba(255, 255, 255, 1)
                     &::before, &::after
                         display: block
