--- a/sass/blocks/_carousel.sass
+++ b/sass/blocks/_carousel.sass
@@ -20,6 +20,7 @@
         position: absolute
         left: 11px
         top: 0
+        display: none
     &-clicked
         &__content
             position: absolute
