Много всего предфинальная версия

--- a/sass/blocks/_form.sass
+++ b/sass/blocks/_form.sass
@@ -32,4 +32,6 @@
         color: $main-font-color
         border-color: $main-font-color
         background: #fff
+        font-size: 12px
+        line-height: 12px
         
