--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,6 +5,10 @@ body
 
 ul
     padding: 0
+    margin: 0
+
+a:hover
+    color: inherit
 
 .container
     max-width: 1148px //width 1138
@@ -13,6 +17,9 @@ ul
 
 .font-red
     color: $main-elements-color
+
+.font-white
+    color: #ffffff
 
 @media (max-width: 1147px)
     .container
@@ -36,4 +43,7 @@ ul
 @import 'blocks/get-form'
 @import 'blocks/form'
 @import 'blocks/form-error'
-
+@import 'blocks/header'
+@import 'blocks/nav'
+@import 'blocks/logo'
+@import 'blocks/to-top'
