--- a/sass/blocks/_btn.sass
+++ b/sass/blocks/_btn.sass
@@ -1,7 +1,8 @@
 .btn
+    display: inline-block
     padding: 14px 35px
-    font-size: 12px
-    line-height: 12px
+    font-size: 16px
+    line-height: 16px
     text-transform: uppercase
     background: transparent
     border: 1px solid 
