--- a/css/swiper/swiper-bundle.css
+++ b/css/swiper/swiper-bundle.css
@@ -210,7 +210,7 @@
 .swiper-pagination-fraction,
 .swiper-pagination-custom,
 .swiper-container-horizontal > .swiper-pagination-bullets {
-  bottom: 10px;
+  bottom: 0;
   left: 0;
   width: 100%;
 }
@@ -242,12 +242,11 @@
   transform: scale(0.33);
 }
 .swiper-pagination-bullet {
-  width: 8px;
-  height: 8px;
+  width: 13px;
+  height: 13px;
   display: inline-block;
   border-radius: 100%;
-  background: #000;
-  opacity: 0.2;
+  background: #DDDDDD;
 }
 button.swiper-pagination-bullet {
   border: none;
@@ -263,7 +262,7 @@ button.swiper-pagination-bullet {
 }
 .swiper-pagination-bullet-active {
   opacity: 1;
-  background: var(--swiper-pagination-color, var(--swiper-theme-color));
+  background: #C0301C;
 }
 .swiper-container-vertical > .swiper-pagination-bullets {
   right: 10px;
