--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -22,6 +22,7 @@
         text-transform: capitalize
 
 .header-top
+    font-family: 'Montserrat', sans-serif
     display: flex
     justify-content: space-between
     margin-bottom: 250px
