--- a/sass/blocks/_to-top.sass
+++ b/sass/blocks/_to-top.sass
@@ -3,7 +3,8 @@
     color: #ffffff
     text-align: center
     line-height: 31px
-    font-size: 36px
+    font-size: 28px
+    font-weight: 700
     width: 40px
     height: 40px
     border-radius: 50%
