--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap');
 @import 'base/vars'  
     
 body 
     color: $main-font-color
+    // font-family: 'Montserrat', sans-serif
+    font-family: 'Roboto Slab', serif
 
 ul
     padding: 0
@@ -10,13 +13,17 @@ ul
 a:hover
     color: inherit
 
+h1, h2, h3, h4
+    font-family: 'Montserrat', sans-serif
+    font-weight: 400 
+
 .container
     max-width: 1148px //width 1138
     padding: 0 10px
     margin: 0 auto
 
 .font-red
-    color: $main-elements-color
+    color: $main-elements-color !important
 
 .font-white
     color: #ffffff
@@ -47,3 +54,6 @@ a:hover
 @import 'blocks/nav'
 @import 'blocks/logo'
 @import 'blocks/to-top'
+@import 'blocks/footer'
+@import 'blocks/blog-posts'
+@import 'blocks/clients'
